@@ -1,3 +1,4 @@
+* Add visual on product and location quantities
 * Define one lost and found location per warehouse
 * Show warehouse in user status if not unique
 * Add cost price revision
